--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
@@ -37,6 +37,85 @@
                 </div>
             </div>
         </nav>
+        <!-- slider start -->
+        <Section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-lg-7">
+                                <h2>
+                                    Mi LED TV 4A PRO 32
+                                </h2>
+                                <P>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                                    do amet sint. Velit officia consequat duis enim velit mollit.
+                                    Exercitation veniam consequat sunt nostrud amet.</P>
+                                <h2>$1289</h2>
+                                <button>
+
+                                </button>
+
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7">
+                            <h2>
+                                Mi LED TV 4A PRO 32
+                            </h2>
+                            <P>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                                do amet sint. Velit officia consequat duis enim velit mollit.
+                                Exercitation veniam consequat sunt nostrud amet.</P>
+                            <h2>$1289</h2>
+                            <button>
+
+                            </button>
+
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7">
+                            <h2>
+                                Mi LED TV 4A PRO 32
+                            </h2>
+                            <P>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                                do amet sint. Velit officia consequat duis enim velit mollit.
+                                Exercitation veniam consequat sunt nostrud amet.</P>
+                            <h2>$1289</h2>
+                            <button>
+
+                            </button>
+
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            </div>
+        </Section>
+        <!-- slider end -->
     </header>
 
 
