--- a/index.html
+++ b/index.html
@@ -41,20 +41,19 @@
         <Section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item active border rounded p-5">
                         <div class="row">
-                            <div class="col-lg-7">
-                                <h2>
-                                    Mi LED TV 4A PRO 32
-                                </h2>
-                                <P>Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                                    do amet sint. Velit officia consequat duis enim velit mollit.
-                                    Exercitation veniam consequat sunt nostrud amet.</P>
-                                <h2>$1289</h2>
-                                <button>
-
-                                </button>
-
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h2>
+                                        Cool Dude Headphone
+                                    </h2>
+                                    <P>
+                                        This is the best headphone in the world for people who just want to waste time
+                                        in front of funky world.</P>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -64,18 +63,17 @@
                 </div>
                 <div class="carousel-item">
                     <div class="row">
-                        <div class="col-lg-7">
-                            <h2>
-                                Mi LED TV 4A PRO 32
-                            </h2>
-                            <P>Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                                do amet sint. Velit officia consequat duis enim velit mollit.
-                                Exercitation veniam consequat sunt nostrud amet.</P>
-                            <h2>$1289</h2>
-                            <button>
-
-                            </button>
-
+                        <div class="col-lg-7 d-flex align-items-center">
+                            <div>
+                                <h2>
+                                    Mega LCD TV For Sports
+                                </h2>
+                                <P>
+                                    This is the best headphone in the world for people who just want to waste time in
+                                    front of funky world.</P>
+                                <h1>$1200</h1>
+                                <div class="btn btn-warning">Buy Now</div>
+                            </div>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -84,18 +82,19 @@
                 </div>
                 <div class="carousel-item">
                     <div class="row">
-                        <div class="col-lg-7">
-                            <h2>
-                                Mi LED TV 4A PRO 32
-                            </h2>
-                            <P>Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                                do amet sint. Velit officia consequat duis enim velit mollit.
-                                Exercitation veniam consequat sunt nostrud amet.</P>
-                            <h2>$1289</h2>
-                            <button>
+                        <div class="col-lg-7 d-flex align-items-center">
+                            <div>
+                                <h2>
+                                    X-Box for your living room
+                                </h2>
+                                <P>
+                                    This is the best headphone in the world for people who just want to waste time in
+                                    front of funky world.
 
-                            </button>
-
+                                </P>
+                                <h1>$600</h1>
+                                <div class="btn btn-warning">Buy Now</div>
+                            </div>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -117,9 +116,39 @@
         </Section>
         <!-- slider end -->
     </header>
+    <!-- categories start -->
+    <main>
+        <section>
+            <div class="container text-center my-5">
+                <div class="row g-2">
+                    <!-- single category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                        <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <!-- single category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                        <div class="p-3 border bg-success rounded-3 d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Bag</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <!-- single category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                        <div class="p-3 border bg-primary rounded-3 d-flex align-items-center justify-content-around">
+                            <h1 class="text-white">Shoes</h1>
 
-
-
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+    </main>
+    <!-- categories end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
