--- a/index.html
+++ b/index.html
@@ -38,80 +38,91 @@
             </div>
         </nav>
         <!-- slider start -->
-        <Section class="mt-5">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <Section class="container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active border rounded p-5">
+                    <div class="carousel-item border rounded-3 active bg-info justify-content-around">
                         <div class="row">
-                            <div class="col-lg-7 d-flex align-items-center">
+                            <div class="col-lg-7 d-flex align-items-center ps-5">
                                 <div>
-                                    <h2>
-                                        Cool Dude Headphone
-                                    </h2>
-                                    <P>
+                                    <h1>Cool Dude Headphone</h1>
+                                    <p>
                                         This is the best headphone in the world for people who just want to waste time
-                                        in front of funky world.</P>
+                                        in
+                                        front
+                                        of
+                                        funky world.</p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <button type="button" class="btn btn-danger">Buy Now</button>
                                 </div>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 p-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 d-flex align-items-center">
-                            <div>
-                                <h2>
-                                    Mega LCD TV For Sports
-                                </h2>
-                                <P>
-                                    This is the best headphone in the world for people who just want to waste time in
-                                    front of funky world.</P>
-                                <h1>$1200</h1>
-                                <div class="btn btn-warning">Buy Now</div>
-                            </div>
-                        </div>
-                        <div class="col-lg-5">
-                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-7 d-flex align-items-center">
-                            <div>
-                                <h2>
-                                    X-Box for your living room
-                                </h2>
-                                <P>
-                                    This is the best headphone in the world for people who just want to waste time in
-                                    front of funky world.
+                    <div class="carousel-item border rounded-3 bg-info">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ps-5">
+                                <div>
+                                    <h1>Mega LCD TV For Sports</h1>
+                                    <p>
 
-                                </P>
-                                <h1>$600</h1>
-                                <div class="btn btn-warning">Buy Now</div>
+                                        This is the best headphone in the world for people who just want to waste time
+                                        in
+                                        front
+                                        of funky world.</p>
+                                    <h1>$1200</h1>
+                                    <button type="button" class="btn btn-danger">Buy Now</button>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-5 p-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
-                        <div class="col-lg-5">
-                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item border rounded-3 bg-info">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ps-5">
+                                <div>
+                                    <h1>X-Box for your living room</h1>
+                                    <p>
+                                        This is the best headphone in the world for people who just want to waste time
+                                        in
+                                        front
+                                        of funky world.
+                                    </p>
+                                    <h1>$600</h1>
+                                    <button type="button" class="btn btn-danger">Buy Now</button>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-5 p-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
                         </div>
                     </div>
+
                 </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </Section>
         <!-- slider end -->
@@ -145,24 +156,78 @@
                     </div>
                 </div>
             </div>
-            </div>
         </section>
     </main>
-    <section class="container my-5">
-        <H1>
+    <!-- Shoes -->
+    <Section class="container my-5">
+        <h1>
             Shoes
-        </H1>
+        </h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Supply 350</h5>
+                        <h1>$160</h1>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Nike 360</h5>
+                        <h1>$160</h1>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Red Airmax</h5>
+                        <h1>$160</h1>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This card has even longer content than the first to show that equal
+                            height
+                            action.</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </Section>
+    <!-- Bags -->
+    <Section class="container my-5">
+        <h1>
+            Bags
+        </h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card h-100">
                     <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Red Laltu Bag</h5>
+                        <h1>$160</h1>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
             </div>
@@ -170,12 +235,14 @@
                 <div class="card h-100">
                     <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Nike 360</h5>
+                        <h1>$160</h1>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.</p>
+                            content.
+                        </p>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
             </div>
@@ -183,19 +250,20 @@
                 <div class="card h-100">
                     <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Red Airmax</h5>
+                        <h1>$160</h1>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This card has even longer content than the first to show that equal
-                            height action.</p>
+                            height
+                            action.</p>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
+    </Section>
     <!-- categories end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
