--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
         <!-- slider start -->
-        <Section class="container">
+        <Section class="container my-5">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -165,7 +165,7 @@
         </h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-                <div class="card h-100">
+                <div class="card border border-0 shadow-lg h-100">
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Supply 350</h5>
@@ -173,13 +173,13 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer border border-0">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card border border-0 shadow-lg h-100">
                     <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Nike 360</h5>
@@ -188,13 +188,13 @@
                             content.
                         </p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer border border-0">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card border border-0 shadow-lg h-100">
                     <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Red Airmax</h5>
@@ -204,7 +204,7 @@
                             height
                             action.</p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer border border-0">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
         </h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-                <div class="card h-100">
+                <div class="card border border-0 shadow-lg h-100">
                     <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Red Laltu Bag</h5>
@@ -226,13 +226,13 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer border border-0">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card border border-0 shadow-lg h-100">
                     <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Nike 360</h5>
@@ -241,13 +241,13 @@
                             content.
                         </p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer border border-0">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card border border-0 shadow-lg h-100">
                     <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Red Airmax</h5>
@@ -257,7 +257,7 @@
                             height
                             action.</p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer border border-0">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
