--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
                     </div>
-                    <div class="card-footer border border-0">
+                    <div class="m-3">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                             content.
                         </p>
                     </div>
-                    <div class="card-footer border border-0">
+                    <div class="m-3">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                             height
                             action.</p>
                     </div>
-                    <div class="card-footer border border-0">
+                    <div class="m-3">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
                     </div>
-                    <div class="card-footer border border-0">
+                    <div class="m-3">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                             content.
                         </p>
                     </div>
-                    <div class="card-footer border border-0">
+                    <div class="m-3">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                             height
                             action.</p>
                     </div>
-                    <div class="card-footer border border-0">
+                    <div class="m-3">
                         <div class="btn btn-warning">Buy Now</div>
                     </div>
                 </div>
