--- a/index.html
+++ b/index.html
@@ -265,6 +265,23 @@
         </div>
     </Section>
     <!-- categories end -->
+
+    <!-- Subscribe started -->
+    <section class="container my-5 bg-info border rounded-3  d-flex justify-content-center align-items-center p-5">
+        <div>
+            <h2>LET'S STAY IN TOUCH</h2>
+            <p>Get updates on sales, specials and more</p>
+
+            <form>
+                <div class="mb-3">
+
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </section>
+    <!-- Subscribe end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
