--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -159,7 +159,7 @@
         </section>
 
         <!-- Shoes -->
-        <Section class="container my-5">
+        <Section class="container my-5" id="shoes">
             <h1>
                 Shoes
             </h1>
@@ -212,7 +212,7 @@
             </div>
         </Section>
         <!-- Bags -->
-        <Section class="container my-5">
+        <Section class="container my-5" id="backpack">
             <h1>
                 Bags
             </h1>
@@ -267,7 +267,8 @@
         <!-- categories end -->
 
         <!-- Subscribe started -->
-        <section class="container my-5 bg-info border rounded-3  d-flex justify-content-center align-items-center p-5">
+        <section class="container my-5 bg-info border rounded-3  d-flex justify-content-center align-items-center p-5"
+            id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
