--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Ak Panda Commerce Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- bootstrap off line css -->
+    <!-- <link rel="stylesheet" href="bootstrap/bootstrap.min.css"> -->
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -49,7 +53,7 @@
                         aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item border rounded-3 active bg-info justify-content-around">
+                    <div class="carousel-item border rounded-3 active panda-bg-info justify-content-around">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ps-5">
                                 <div>
@@ -61,7 +65,7 @@
                                         of
                                         funky world.</p>
                                     <h1>$420</h1>
-                                    <button type="button" class="btn btn-danger">Buy Now</button>
+                                    <button type="button" class="btn panda-btn-buy-now">Buy Now</button>
                                 </div>
                             </div>
                             <div class="col-lg-5 p-5">
@@ -69,7 +73,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item border rounded-3 bg-info">
+                    <div class="carousel-item border rounded-3 panda-bg-info">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ps-5">
                                 <div>
@@ -81,7 +85,7 @@
                                         front
                                         of funky world.</p>
                                     <h1>$1200</h1>
-                                    <button type="button" class="btn btn-danger">Buy Now</button>
+                                    <button type="button" class="btn panda-btn-buy-now">Buy Now</button>
                                 </div>
                             </div>
 
@@ -90,7 +94,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item border rounded-3 bg-info">
+                    <div class="carousel-item border rounded-3 panda-bg-info">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center ps-5">
                                 <div>
@@ -102,7 +106,7 @@
                                         of funky world.
                                     </p>
                                     <h1>$600</h1>
-                                    <button type="button" class="btn btn-danger">Buy Now</button>
+                                    <button type="button" class="btn panda-btn-buy-now">Buy Now</button>
                                 </div>
                             </div>
 
@@ -131,7 +135,7 @@
     <main>
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row g-4 categories">
                     <!-- single category -->
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around">
@@ -174,7 +178,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn  panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -189,7 +193,7 @@
                             </p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -205,7 +209,7 @@
                                 action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -227,7 +231,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -242,7 +246,7 @@
                             </p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -258,7 +262,7 @@
                                 action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -267,7 +271,8 @@
         <!-- categories end -->
 
         <!-- Subscribe started -->
-        <section class="container my-5 bg-info border rounded-3  d-flex justify-content-center align-items-center p-5"
+        <section
+            class="container my-5 panda-bg-info border rounded-3  d-flex justify-content-center align-items-center p-5"
             id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
@@ -278,7 +283,7 @@
 
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn btn-warning">Submit</button>
+                    <button type="submit" class="btn panda-btn-buy-now">Submit</button>
                 </form>
             </div>
         </section>
@@ -294,6 +299,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <!-- bootstrap off line js -->
+    <!-- <script src="bootstrap/bootstrap.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
