--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body class="">
+<body>
     <header class="container">
         <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
